--- a/part_10-model-selection-and-boosting/model_selection/Untitled.ipynb
+++ b/part_10-model-selection-and-boosting/model_selection/Untitled.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def timeit(method):\n",
+    "    def timed(*args, **kw):\n",
+    "        ts = time.time()\n",
+    "        result = method(*args, **kw)\n",
+    "        te = time.time()\n",
+    "        if 'log_time' in kw:\n",
+    "            name = kw.get('log_name', method.__name__.upper())\n",
+    "            kw['log_time'][name] = int((te - ts) * 1000)\n",
+    "        else:\n",
+    "            print ('%r  %2.2f ms' % (method.__name__, (te - ts) * 1000))\n",
+    "        return result\n",
+    "    return timed"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -14,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +43,8 @@
     "# Importing the libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "import time"
    ]
   },
   {
@@ -124,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +154,7 @@
        "0.9005302187615868"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,43 +168,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:813: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.06388957356626285"
+       "0.6991779804229736"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracies.std()"
+    "a = time.time()\n",
+    "# Appying Grid Search to find the best model and the best parameters \n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "parameters = [{'C':[1,10,100,1000], 'kernel':['linear']},\n",
+    "             {'C':[1,10,100,1000], 'kernel':['rbf'],'gamma':[0.5,0.01,0.01,0.001,0.0001]}]\n",
+    "grid_search = GridSearchCV(estimator=classifier,\n",
+    "                           param_grid=parameters,\n",
+    "                           scoring='accuracy',\n",
+    "                           cv = 10,\n",
+    "                           n_jobs = -1\n",
+    "                            )\n",
+    "grid_search = grid_search.fit(X_train,y_train)\n",
+    "time.time() - a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.80645161, 0.96666667, 0.8       , 0.93333333, 0.86666667,\n",
-       "       0.83333333, 0.93333333, 0.93333333, 0.96666667, 0.96551724])"
+       "0.9"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracies"
+    "best_accuracy = grid_search.best_score_\n",
+    "best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 1, 'gamma': 0.5, 'kernel': 'rbf'}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_parameters = grid_search.best_params_\n",
+    "best_parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0,1.1,0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:813: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.6359169483184814"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = time.time()\n",
+    "# Appying Grid Search to find the best model and the best parameters \n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "parameters = [{'C':[1,10,100,1000], 'kernel':['linear']},\n",
+    "             {'C':[1,10,100,1000], 'kernel':['rbf'],'gamma':np.arange(0,1.1,0.1)}]\n",
+    "grid_search = GridSearchCV(estimator=classifier,\n",
+    "                           param_grid=parameters,\n",
+    "                           scoring='accuracy',\n",
+    "                           cv = 10,\n",
+    "                           n_jobs = -1\n",
+    "                            )\n",
+    "grid_search = grid_search.fit(X_train,y_train)\n",
+    "time.time() - a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9033333333333333"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_accuracy = grid_search.best_score_\n",
+    "best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 1, 'gamma': 0.7000000000000001, 'kernel': 'rbf'}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_parameters = grid_search.best_params_\n",
+    "best_parameters"
    ]
   },
   {
